@@ -1,3 +1,8 @@
+2007-06-24 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.readline: fixed support for universal binaries
+	  on Darwin
+
 2007-06-12 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.gpsim/Makefile: use new svn URL scheme
